# plant

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json  vcpkg.json
include/: plant.hpp
src/: main.cpp
